--- a/webapp/templates/404.html
+++ b/webapp/templates/404.html
@@ -19,7 +19,7 @@ Error 404
                     <h1> Oops! </h1>
                     <h2> 404 Not Found </h2>
                     <div class="error-details">
-                        ERROR: {{ error.error }}
+                        ERROR: {{ error }}
                     </div>
                     <div class="error-actions go-home">
                         <a href="/" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-home"></span>
