--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -93,7 +93,7 @@ WineQuality
                                 </blockquote>
 
                             </label>
-                            <textarea readonly class="form-control" id="exTextarea" rows="5">{{ response }}</textarea>
+                            <textarea readonly class="form-control" id="exTextarea" rows="5">The quality of wine is: {{ response }}</textarea>
                         </div>
                     </form>
                 </div>
