Correcting some typos in index html file

--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -97,7 +97,7 @@ WineQuality
                             <label for="translation-result">
 
                                 <blockquote class="blockquote">
-                                    <p class="mb-2">Wine Quality (Score between o and 10):</p>
+                                    <p class="mb-2">Wine Quality (Score between 0 and 10):</p>
                                 </blockquote>
 
                             </label>
